# my-rust-microkernel

./: .gitignore  Cargo.toml  IPC.md  Memory_Layout.md  architecture.md  run.sh  rust-toolchain.toml  test.sh  x86_64-my_os.json
common/src/: ipc.rs  lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  loader.rs  main.rs  mem.rs  process.rs  serial.rs
kernel/src/arch/x86_64/: linker.ld  switch.rs
kernel/src/syscall/: mod.rs
kernel/src/task/: context.rs  executor.rs  keyboard.rs  mod.rs
kernel/tests/: basic_boot.rs
runner/: Cargo.toml
runner/src/: main.rs
user/.cargo/: config.toml
user/drivers/virtio_disk/: Cargo.toml
user/init/: Cargo.toml
user/init/src/: main.rs
