[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# ✅ 对！这个才是给内核用的纯 no_std 接口
bootloader_api = "0.11"
uart_16550 = "0.3.0" # ✅ 引入标准串口驱动
x86_64 = "0.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9"
linked_list_allocator = "0.10.5"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0" # 用于解析键盘扫描码
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.0", default-features = false } # 用于安全的全局初始化

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false