[package]
name = "kernel"
version = "0.1.0"
edition = "2024"


[dependencies]
bootloader_api = "0.11.15" # 升级到最新补丁
x86_64 = "0.14.13"
uart_16550 = "0.3"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"
conquer-once = { version = "0.2", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }


[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false